--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-/.sass-cache/
+# Ignore configuration files that may contain sensitive information.
+.htaccess
+
+# Ignore hidden and project files.
+*.project
+*.idea/*
+.DS_Store
+/.htaccess
+*.scssc
